--- a/mdwidgets/src/main/res/layout/snailbar.xml
+++ b/mdwidgets/src/main/res/layout/snailbar.xml
@@ -61,7 +61,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/icon_container"
@@ -98,12 +100,13 @@
 
             <ImageView
                 android:id="@+id/snailbar_expand"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
+                android:layout_width="30dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="5dp"
                 android:background="?android:selectableItemBackgroundBorderless"
                 android:contentDescription="@string/expand_msg"
-                android:padding="3dp"
+                android:padding="4dp"
                 android:src="@drawable/ic_expand"
                 android:visibility="gone"
                 tools:visibility="visible" />
