--- a/mdwidgets/src/main/res/layout/snailbar.xml
+++ b/mdwidgets/src/main/res/layout/snailbar.xml
@@ -70,7 +70,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|start"
-                android:layout_marginStart="5dp">
+                android:layout_marginStart="5dp"
+                android:gravity="center"
+                android:minHeight="40dp">
 
                 <ImageView
                     android:id="@+id/snailbar_icon"
