--- a/mdwidgets/src/main/res/drawable/dialog_bg.xml
+++ b/mdwidgets/src/main/res/drawable/dialog_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="8dp" />
-    <solid android:color="#FFF" />
+    <corners android:radius="@dimen/coxylicDialogRadius" />
+    <solid android:color="@color/coxylicDialogBackground" />
 
 </shape>
