--- a/mdwidgets/src/main/res/layout/button_flat.xml
+++ b/mdwidgets/src/main/res/layout/button_flat.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="15dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -15,7 +15,7 @@
         android:elevation="0dp"
         android:minWidth="70dp"
         android:minHeight="42dp"
-        android:textColor="@color/md2widgets_dialog_accent"
+        android:textColor="@color/coxylicDialogAccent"
         android:textSize="13sp"
         android:visibility="gone"
         tools:text="消极"
@@ -33,7 +33,7 @@
         android:elevation="0dp"
         android:minWidth="65dp"
         android:minHeight="42dp"
-        android:textColor="@color/md2widgets_dialog_accent"
+        android:textColor="@color/coxylicDialogAccent"
         android:textSize="13sp"
         android:visibility="gone"
         tools:text="确认"
@@ -49,7 +49,7 @@
         android:elevation="0dp"
         android:minWidth="65dp"
         android:minHeight="42dp"
-        android:textColor="@color/md2widgets_dialog_accent"
+        android:textColor="@color/coxylicDialogAccent"
         android:textSize="13sp"
         android:visibility="gone"
         tools:text="取消"
