--- a/mdwidgets/src/main/res/layout/button_outline.xml
+++ b/mdwidgets/src/main/res/layout/button_outline.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="15dp">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/md2_dialog_negative"
@@ -15,7 +15,7 @@
         android:elevation="0dp"
         android:minWidth="70dp"
         android:minHeight="42dp"
-        android:textColor="@color/md2widgets_dialog_accent"
+        android:textColor="@color/coxylicDialogAccent"
         android:textSize="13sp"
         android:visibility="gone"
         tools:text="消极"
@@ -32,7 +32,7 @@
         android:elevation="0dp"
         android:minWidth="70dp"
         android:minHeight="42dp"
-        android:textColor="@color/md2widgets_dialog_accent"
+        android:textColor="@color/coxylicDialogAccent"
         android:textSize="13sp"
         android:visibility="gone"
         tools:text="确认"
@@ -48,7 +48,7 @@
         android:elevation="0dp"
         android:minWidth="70dp"
         android:minHeight="42dp"
-        android:textColor="@color/md2widgets_dialog_accent"
+        android:textColor="@color/coxylicDialogAccent"
         android:textSize="13sp"
         android:visibility="gone"
         tools:text="取消"
