--- a/mdwidgets/src/main/res/layout/md2dialog.xml
+++ b/mdwidgets/src/main/res/layout/md2dialog.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="15dp"
-    android:paddingTop="15dp"
-    android:paddingEnd="15dp"
-    android:paddingBottom="5dp">
+    android:padding="10dp">
 
     <LinearLayout
         android:id="@+id/content_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="5dp">
 
         <!--    title-->
         <TextView
             android:id="@+id/md2_dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#323232"
+            android:layout_marginBottom="12dp"
+            android:textColor="#000000"
             android:textSize="16sp"
             tools:text="标题" />
 
@@ -29,10 +27,8 @@
             android:id="@+id/md2_dialog_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
             android:layout_marginEnd="15dp"
-            android:textColor="#656565"
+            android:textColor="#525252"
             android:textSize="14sp"
             tools:text="内容" />
 
@@ -41,7 +37,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="5dp"
             android:visibility="gone"
             tools:visibility="visible">
 
@@ -56,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="15dp"
-                android:textColor="#656565"
+                android:textColor="#323232"
                 android:textSize="15sp"
                 tools:text="加载中..." />
 
@@ -137,8 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/content_view"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal">
+        android:layout_centerInParent="true">
 
     </FrameLayout>
 
