--- a/mdwidgets/src/main/res/layout/snailbar.xml
+++ b/mdwidgets/src/main/res/layout/snailbar.xml
@@ -16,7 +16,7 @@
         android:clickable="true"
         android:elevation="5dp"
         android:focusable="true"
-        android:minHeight="40dp"
+        android:minHeight="@dimen/coxylicSnailBarMinHeight"
         android:orientation="vertical">
 
         <LinearLayout
@@ -45,7 +45,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="15dp"
-                        android:textColor="#FFF"
+                        android:textColor="@color/coxylicSnailBarMsgColor"
                         android:textSize="14sp" />
 
                 </ScrollView>
@@ -72,7 +72,7 @@
                 android:layout_gravity="center_vertical|start"
                 android:layout_marginStart="5dp"
                 android:gravity="center"
-                android:minHeight="40dp">
+                android:minHeight="@dimen/coxylicSnailBarMinHeight">
 
                 <ImageView
                     android:id="@+id/snailbar_icon"
@@ -96,7 +96,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:textColor="#FFF"
+                android:textColor="@color/coxylicSnailBarMsgColor"
                 android:textSize="14sp"
                 tools:text="提示" />
 
@@ -121,7 +121,7 @@
                 android:layout_gravity="center_vertical|end"
                 android:layout_marginEnd="10dp"
                 android:minWidth="55dp"
-                android:minHeight="40dp"
+                android:minHeight="@dimen/coxylicSnailBarMinHeight"
                 android:textSize="13sp"
                 android:visibility="gone"
                 tools:text="Action"
@@ -160,7 +160,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="15dp"
-                        android:textColor="#FFF"
+                        android:textColor="@color/coxylicSnailBarMsgColor"
                         android:textSize="14sp" />
 
                 </ScrollView>
