--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#E91E63</color>
 
-    <color name="coxylicSnailBarColor">#2196F3</color>
-    <color name="coxylicSnailBarMsgColor">#FFF</color>
-    <color name="coxylicSnailBarActionTextColor">#E91E63</color>
+<!--    <color name="coxylicSnailBarColor">#2196F3</color>-->
+<!--    <color name="coxylicSnailBarMsgColor">#FFF</color>-->
+<!--    <color name="coxylicSnailBarActionTextColor">#E91E63</color>-->
 
     <color name="coxylicDialogAccent">#E91E63</color>
     <color name="coxylicDialogAccentDeep">#1976D2</color>
