--- a/mdwidgets/src/main/res/layout/button_fill.xml
+++ b/mdwidgets/src/main/res/layout/button_fill.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="15dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="15dp"
     android:orientation="horizontal">
 
     <com.google.android.material.button.MaterialButton
@@ -14,13 +14,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
+        android:backgroundTint="@color/coxylicDialogAccent"
         android:elevation="0dp"
         android:minWidth="70dp"
         android:minHeight="42dp"
         android:textColor="#FFF"
         android:textSize="13sp"
         android:visibility="gone"
-        app:rippleColor="@color/coxylicDialogAccent"
+        app:rippleColor="#25FFFFFF"
         tools:text="消极"
         tools:visibility="visible" />
 
@@ -32,13 +33,14 @@
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
         android:layout_marginStart="8dp"
+        android:backgroundTint="@color/coxylicDialogAccent"
         android:elevation="0dp"
         android:minWidth="70dp"
         android:minHeight="42dp"
         android:textColor="#FFF"
         android:textSize="13sp"
         android:visibility="gone"
-        app:rippleColor="@color/coxylicDialogAccent"
+        app:rippleColor="#25FFFFFF"
         tools:text="确认"
         tools:visibility="visible" />
 
@@ -47,14 +49,16 @@
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toStartOf="@id/md2_dialog_confirm"
         android:layout_centerInParent="true"
+        android:layout_toStartOf="@id/md2_dialog_confirm"
+        android:backgroundTint="@color/coxylicDialogAccent"
         android:elevation="0dp"
         android:minWidth="70dp"
         android:minHeight="42dp"
         android:textColor="#FFF"
         android:textSize="13sp"
         android:visibility="gone"
+        app:rippleColor="#25FFFFFF"
         tools:text="取消"
         tools:visibility="visible" />
 
