--- a/mdwidgets/src/main/res/layout/md2dialog.xml
+++ b/mdwidgets/src/main/res/layout/md2dialog.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:paddingStart="10dp"
+    android:paddingTop="10dp"
+    android:paddingEnd="10dp">
 
     <LinearLayout
         android:id="@+id/content_view"
@@ -17,7 +19,6 @@
             android:id="@+id/md2_dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
             android:textColor="#000000"
             android:textSize="16sp"
             tools:text="标题" />
@@ -27,23 +28,28 @@
             android:id="@+id/md2_dialog_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="15dp"
             android:textColor="#525252"
             android:textSize="14sp"
-            tools:text="内容" />
+            android:visibility="gone"
+            tools:text="内容"
+            tools:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/md2_dialog_loading_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:visibility="gone"
             tools:visibility="visible">
 
             <ProgressBar
                 style="@style/Widget.AppCompat.ProgressBar"
-                android:layout_width="50dp"
-                android:layout_height="50dp" />
+                android:layout_width="45dp"
+                android:layout_height="45dp" />
 
             <TextView
                 android:id="@+id/md2_dialog_loading_msg"
@@ -56,6 +62,14 @@
                 tools:text="加载中..." />
 
         </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/md2_dialog_custom_view_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp">
+
+        </FrameLayout>
 
         <ListView
             android:id="@+id/md2_dialog_list"
@@ -70,6 +84,7 @@
             android:id="@+id/md2_dialog_check1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="-5dp"
             android:layout_marginTop="18dp"
             android:gravity="center|start"
             android:textColor="#757575"
@@ -132,7 +147,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/content_view"
         android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:paddingBottom="3dp">
 
     </FrameLayout>
 
